# mmWave

./: .gitignore  CMakeLists.txt  README.md  WEBSOCKET_MASKED_FIX.md  extract_protocol.py  flash_firmware.ps1  logs.txt  partitions.csv  read_boot_log.py  read_full_log.py  read_serial.py  read_test_log.py  sdkconfig.defaults  serial_cmd_test.py  upload3.py
.claude/: mcp.json  settings.json
.claude/skills/esp32-flash/: SKILL.md
.claude/skills/esp32-radar-dev/: SKILL.md
.claude/skills/esp32-upload-server/: SKILL.md
.claude/skills/esp32-websocket-dev/: SKILL.md
.claude/skills/serial-verify-radar-protocol/: SKILL.md
.github/workflows/: build-esp32c3.yml
components/radar/: CMakeLists.txt  Kconfig
components/radar/include/: radar.h
components/radar/src/ld2450/: radar_ld2450.c  radar_ld2450.h
components/radar/src/ld2452/: radar_ld2452.c
components/radar/src/ld2460/: radar_ld2460.c  radar_ld2460.h
components/radar/src/ld2461/: radar_ld2461.c
components/radar/src/ld6002b/: radar_ld6002b.c  radar_ld6002b.h
components/radar/src/ld6004/: radar_ld6004.c  radar_ld6004.h
components/radar/src/r60abd1/: radar_r60abd1.c
docs/: LD2460_protocol.md
frontend/: DEVELOPMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  ZONE_FEATURE_GUIDE.md  api.js  canvas.js  index.html  main.js  radar.js  style.css  test-zones.html  websocket.js  zone-editor.js  zone.js
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_wdt.c  app_wdt.h  main.c
main/config/: default_config.h  nvs_config.c  nvs_config.h
main/core/: state_machine.c  state_machine.h
main/drivers/: gpio_control.c  gpio_control.h
main/mqtt/: app_mqtt.h  mqtt_client.c
main/radar_adapter/: radar_adapter.c  radar_adapter.h
main/radar_test/: radar_test.c  radar_test.h
main/utils/: system_info.c  system_info.h
main/watchdog/: app_wdt.c
main/web_server/: CMakeLists.txt  dns_server.c  dns_server.h  embedded_web.h  fatfs_init.c  fatfs_init.h  file_manager.c  file_manager.h  http_server.c  http_server.h  http_server_new.c  portal_handlers.c  portal_handlers.h  portal_html.html  portal_html_content.h  radar_broadcast.c  radar_broadcast.h  upload_page.h  view_config.c  view_config.h  websocket_server.c  websocket_server.h
main/web_server/config/: server_config.c  server_config.h
main/web_server/core/: http_server_core.c  http_server_core.h  server_context.c  server_context.h
main/web_server/handlers/: health_handler.c  health_handler.h  radar_handler.c  radar_handler.h  upload_handler.c  upload_handler.h
main/web_server/security/: input_validator.c  input_validator.h  rate_limiter.c  rate_limiter.h  security_headers.c  security_headers.h
main/web_server/websocket/: ws_client_mgr.c  ws_client_mgr.h  ws_heartbeat.c  ws_heartbeat.h  ws_server.c  ws_server.h
main/wifi/: softap.c  softap.h  wifi_manager.c  wifi_manager.h
main/zone_detector/: zone_api_handler.c  zone_api_handler.h  zone_config.c  zone_config.h  zone_detector.c  zone_detector.h
storage/www/: index.html
storage/www/css/: canvas.css  layout.css  main.css
storage/www/js/: api.js  app.js  config.js  radar-canvas.js  utils.js  websocket.js
tools/: read_serial.ps1  test_ld2450_protocol.ps1  test_ld2452_protocol.ps1  test_ld2460_protocol.ps1  test_ld6004_all_commands.ps1  test_ld6004_protocol.ps1  test_ws_serial.ps1  upload_frontend.ps1
